# umag

./: .gitignore  .gitmodules  Makefile  README.md  main.py  old_main.py  output.txt  pyproject.toml
examples/initial_linear_Y/: compare.rez  fort.20  magfield0.map  magfield1.map  micromag.rez
spindynapy/: .clang-format  CMakeLists.txt  __init__.py  cartesian.py  geometry.py  logger.py  matlib.py  pyproject.toml  setup.py  unit.py
spindynapy/core/: bindings.cpp  hello.cpp  hello.hpp
spindynapy/core_src/: bindings.cpp  constants.hpp  geometries.hpp  interactions.hpp  logger.hpp  printer.hpp  registries.hpp  simulation.hpp  solvers.hpp  types.hpp
spindynapy/core_src/geometries/: base.hpp  cartesian.hpp
spindynapy/core_src/interactions/: base.hpp
spindynapy/core_src/registries/: base.hpp
spindynapy/core_src/solvers/: base.hpp
spindynapy/core_src/types/: base.hpp  cartesian.cpp  cartesian.hpp  material.cpp  material.hpp
src/: anisotropy.f90  ash.f90  build.bat  create_mesh.f90  create_regions.f90  demag.f90  demag_tensor.f90  exchange.f90  f.f90  f1.f90  f2.f90  fun.f90  g.f90  g1.f90  g2.f90  gun.f90  impulse.f90  initial_magnetization.f90  llg_step.f90  magmod.f90  magmod.mod  micromag.f90  neighbour.f90  norm_vector.f90  nxx.f90  nxy.f90  output_magfield.f90  vector_cross_vector.f90  vector_dot_scalar.f90  vector_dot_vector.f90  vector_equal.f90  vector_plus_vector.f90  zeeman.f90
utils/: convert.py  energy.py  magn.py
