[project]
name = "umag"
version = "0.1.0"
description = ""
authors = [
    {name = "ilyata76",email = "ilyata76@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spindynapy @ ./spindynapy",
    "numpy (>=2.2.4,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 110

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
