# ===================================================================
#  Root project metadata and environment configuration for UMAG
# ===================================================================

# -------------------------------------------------------------------
#  Core project metadata (PEP 621 compliant)
# -------------------------------------------------------------------

[project]
name = "umag"
version = "0.1.0"
description = ""
authors = [
    {name = "ilyata76",email = "ilyata76@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spindynapy @ ./spindynapy",
    "numpy (>=2.2.4,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]

# -------------------------------------------------------------------
#  Poetry-specific configuration
# -------------------------------------------------------------------

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

# -------------------------------------------------------------------
#  Code formatting configuration
# -------------------------------------------------------------------

[tool.black]
line-length = 110

# -------------------------------------------------------------------
#  Build backend (PEP 517/518)
# -------------------------------------------------------------------

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
