# ===================================================================
#  Python Build Configuration for SpinDynaPy
# ===================================================================

# -------------------------------------------------------------------
#  Backend & Dependencies for building the C++ extension
# -------------------------------------------------------------------

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake",
    "ninja",
    "pybind11-stubgen>=2.5.3",
    "black",
    "numpy"
]
build-backend = "setuptools.build_meta"

# -------------------------------------------------------------------
#  Project Metadata
# -------------------------------------------------------------------

[project]
name = "spindynapy"             # Canonical package name (for publishing or local use)
version = "0.0.1"               # Initial version
requires-python = ">=3.12"      # Minimum Python version (CPython ABI compatibility)

# -------------------------------------------------------------------
#  setuptools Configuration
# -------------------------------------------------------------------

[tool.setuptools]
packages = []                   # No automatic discovery; only explicit packages included

[tool.setuptools.dynamic]
# version = {file = "spindynapy/__init__.py"}  # Optional: extract version from __init__.py
